tests/stable/function/compile_fail/extra_precondition.stderr
error[E0560]: struct `foo` has no field named `_custom_must_20be_20baz`
 --> $DIR/extra_precondition.rs:9:14
  |
9 |     #[assure("must be baz", reason = "is baz")]
  |              ^^^^^^^^^^^^^ `foo` does not have this field
  |
  = note: available fields are: `_custom_must_20be_20bar`
